--- a/cloudfunctions/music/package.json
+++ b/cloudfunctions/music/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "tcb-router": "^1.1.2",
-    "wx-server-sdk": "latest"
+    "wx-server-sdk": "latest",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   }
 }
