--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,7 +3,8 @@
     "pages/playlist/playlist",
     "pages/blog/blog",
     "pages/profile/profile",
-    "components/playlist/playlist"
+    "components/playlist/playlist",
+    "pages/musiclist/musiclist"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
