--- a/project.config.json
+++ b/project.config.json
@@ -81,6 +81,13 @@
 					"pathName": "pages/blog-edit/blog-edit",
 					"query": "nickName= \"小魏lwey\"&avatarUrl=\"https://wx.qlogo.cn/mmopen/vi_32/zia53RUE441liclLx…hFodOu6ibIQ9kZk9lhYqU8JPn4Q6yQLMgUXvHKkobsOxg/132\"",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "profile",
+					"pathName": "pages/profile/profile",
+					"query": "",
+					"scene": null
 				}
 			]
 		}
